# dash-local-react-components

./: LICENSE  README.md  pyproject.toml
example/: main.py
example/react_components/: my_component.js
src/: __init__.py  _functions.py  local_react_component.py
src/dash_local_react_components/: __init__.py  _common.py  _config.py  _file_generator.py  _functions.py  _types.py  _utils.py
src/dash_local_react_components/es-react/: checkPropTypes-0d3dc276.js  index-ad6b2a22.js  index.js  prop-types.js  react-dom-server-browser.js  react-dom.js  react-is.js  react.js  react.production.min-8d2700a6.js
tests/: __init__.py  test_utils.py
