[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dash-local-react-components"
version = "1.1.0"
authors = [
    { name="Tomasz Rewak", email="tomasz.rewak@gmail.com" },
]
description = "Allows for loading react components in Dash applications directly from local project files, without a separate build process."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'dash >= 2.6.0, < 3',
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/TomaszRewak/dash-local-react-components"
"Bug Tracker" = "https://github.com/TomaszRewak/dash-local-react-components/issues"

[tool.mypy]
python_version = "3.10"
warn_return_any = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests"
]